name:                machines-tutorial
version:             0.1.0.0
homepage:            http://github.com/aloiscochard/machines-tutorial
license:             Apache-2.0
license-file:        LICENSE
author:              Alois Cochard
maintainer:          alois.cochard@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable machines-tutorial
  default-language:  Haskell2010
  hs-source-dirs:    src
  main-is:           Main.hs
  ghc-options:       -threaded -Wall
  other-modules:
    Tutorial1
    Tutorial2
    Tutorial3
    Tutorial4
  build-depends:
      base >=4.8 && <5
    , bytestring
    , machines
    , machines-io
    , machines-directory
    , machines-process
    , text
